fixed ftr alignment

--- a/style.css
+++ b/style.css
@@ -203,7 +203,7 @@ section .container {
 
 footer {
     width: 100%;
-    min-height: 6rem;
+    height: 6rem;
 }
 
 footer section {
